# openrescue

./: .env.example  .gitignore  LICENSE  README.md
agent/: config.example.yml  pyproject.toml
agent/src/openrescue/: buffer.py  categorizer.py  config.py  default_categories.yml  main.py  metrics.py  shipper.py  tracker.py
agent/tests/: test_buffer.py  test_categorizer.py  test_config.py  test_main.py  test_metrics.py  test_shipper.py  test_tracker.py
docs/: TODO.md
docs/plans/: 2026-03-29-openrescue-mvp.md  2026-04-02-settings-app-design.md
packaging/: build-deb.sh  nfpm.yml  openrescue.service  postinst.sh  prerm.sh
server/: .env.example  docker-compose.yml
server/config/: alloy-config.alloy  grafana-dashboards.yml  grafana-datasources.yml  mimir-config.yml
server/dashboards/: activity-overview.json
web/: next.config.mjs  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: application-layout.tsx  layout.tsx  page.tsx
web/src/app/api/categories/: route.ts
web/src/app/api/categories/[id]/: route.ts
web/src/app/api/config/[deviceId]/: route.ts
web/src/app/api/devices/: route.ts
web/src/app/api/devices/[id]/: route.ts
web/src/app/api/devices/[id]/exclusions/: route.ts
web/src/app/api/devices/register/: route.ts
web/src/app/api/settings/: route.ts
web/src/app/api/settings/[deviceId]/[key]/: route.ts
web/src/app/api/settings/[key]/: route.ts
web/src/app/categories/: page.tsx
web/src/app/devices/: page.tsx
web/src/app/devices/[id]/: page.tsx
web/src/app/settings/: page.tsx
web/src/lib/: auth.ts  db.ts
(+2 files in other folders)
